--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -25,3 +25,11 @@
 #container a {
   text-decoration: none;
 }
+.boton-personalizado {
+  --background: #9a2b9e; 
+  color: rgb(8, 8, 8); 
+  border-radius: 10px;
+  border: 1px solid #9a2b9e;
+  
+
+}
